--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            <p>Un blog es la mejor manera de trasnmitir información. Son divertidos, cortos y dinamicos. ¡Haz un blog! (Bueno, haz lo que quieras).</p>
         </div>
     </div>
 </body>
