color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="./imagenes/logo_header.png" alt="Logo de hyperblog">
             Hyperblog
             <span id="tagline">Tu blog de cabecera</span>
         </div>
@@ -18,6 +19,9 @@
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
             <p>Un blog es la mejor manera de trasnmitir información. Son divertidos, cortos y dinamicos. ¡Haz un blog! (Bueno, haz lo que quieras).</p>
             <p>Suscribete y dale like</p>
+            <div id="footer">
+                Hecho con amor en Platzi
+            </div>
         </div>
     </div>
 </body>
