--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,9 @@
             <p>Un blog es la mejor manera de trasnmitir información. Son divertidos, cortos y dinamicos. ¡Haz un blog! (Bueno, haz lo que quieras).</p>
             <p>Suscribete y dale like</p>
         </div>
+        <div id="footer">
+            Hecho con amor en Platzi
+        </div>
     </div>
 </body>
 </html>
