Tildes y tipos arreglados en el post

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@
             <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
-            <h1>Este es el titulo atractivo e interesante del post</h1>
+            <h1>Este es el titulo increíble e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
             <p>Un blog es la mejor manera de trasnmitir información. Son divertidos, cortos y dinamicos. ¡Haz un blog! (Bueno, haz lo que quieras).</p>
             <p>Suscribete y dale like</p>
