--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
             <p>Un blog es la mejor manera de trasnmitir información. Son divertidos, cortos y dinamicos. ¡Haz un blog! (Bueno, haz lo que quieras).</p>
+            <p><img src="./imagenes/gatito-gracioso - copia.jpeg" width="100%" alt=""></p>
             <p>Suscribete y dale like</p>
         </div>
         <div id="footer">
